--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "leancloud-storage": "^3.4.2",
     "node-sass": "^4.7.2",
     "normalize.css": "^7.0.0",
+    "object-path": "^0.11.4",
     "sass-loader": "^6.0.6",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
