--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "object-path": "^0.11.4",
     "sass-loader": "^6.0.6",
     "vue": "^2.5.2",
+    "vue-i18n": "^5.0.3",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
